# PacManPROG2Student

./: CMakeLists.txt  ConsoleRendering.cpp  ConsoleRendering.h  Map.cpp  Map.h  PacManGame.cpp  PacManGame.h  README.md  RenderingMethod.h  global.h  main.cpp  sdl_demo.cpp  sdl_demo.h
maps/: level_01.txt  level_02.txt
